<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExchangeTabFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_marginEnd="@dimen/padding_16"
        android:layout_marginBottom="@dimen/padding_8"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_60"
            android:layout_marginTop="@dimen/padding_8"
            android:layout_marginBottom="@dimen/padding_8"
            android:paddingTop="@dimen/padding_8"
            android:paddingBottom="@dimen/padding_8"
            android:weightSum="11">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="8"
                android:text="@string/st_exchanges"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_size_large"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="3">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:paddingStart="@dimen/padding_8"
                    android:weightSum="3">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/ma_notification_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@null"
                        android:src="@drawable/ic_bell_icon" />

                    <ImageButton
                        android:id="@+id/ma_settings_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:src="@drawable/ic_settings" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ma_topLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_50"
            android:weightSum="11">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="#f8f8f8"
                android:padding="@dimen/padding_8"
                app:cardCornerRadius="@dimen/padding_30">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ma_search_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/clr_light_grey"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawablePadding="@dimen/padding_8"
                    android:hint="@string/st_search"
                    android:padding="@dimen/padding_8"
                    android:paddingStart="@dimen/padding_8"
                    android:textColorHint="@color/clr_text_grey" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/ma_filter_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/padding_8"
                android:layout_weight="3"
                android:background="@drawable/drawable_button_border"
                android:drawableLeft="@drawable/ic_filter_icon"
                android:text="@string/st_filter"
                android:textAllCaps="false"
                android:textColor="@color/clr_text_grey" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8"
            android:layout_marginBottom="@dimen/padding_8"
            android:paddingTop="@dimen/padding_8"
            android:paddingBottom="@dimen/padding_8">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_cryptocurrency"
                android:textColor="@color/black"
                android:textFontWeight="@integer/material_motion_duration_medium_2"
                android:textSize="@dimen/dimen_text_size_large" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_16"
                android:text="@string/st_nft"
                android:textColor="@color/clr_text_grey"
                android:textSize="@dimen/dimen_text_size_large"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_button_border"
            app:cardBackgroundColor="@color/clr_cardview_bg_transparent_color"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="4"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/padding_16"
                    android:paddingTop="@dimen/padding_16"
                    android:paddingEnd="@dimen/padding_16">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_bitcoin_cryptocurrency" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/st_btc"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_text_size_medium"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/st_Bitcoin"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_text_size_normal" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/st_dummy_price_text"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_text_size_medium"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/st_dummy_added_percent"
                            android:textColor="@color/clr_green"
                            android:textSize="@dimen/dimen_text_size_normal"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_cardview_background">

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8"
            android:layout_marginBottom="@dimen/padding_8"
            android:paddingTop="@dimen/padding_8"
            android:paddingBottom="@dimen/padding_8"
            android:weightSum="11">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="8"
                android:text="@string/st_top_cryptocurrencies"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_size_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/st_view_all"
                android:textColor="@color/clr_text_grey"
                android:textSize="@dimen/dimen_text_size_normal" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/currency_listing"
                android:layout_width="match_parent"
                android:text="Sample text"
                android:layout_height="match_parent"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/composeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>